<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="cz.cvut.fit.travelmates.auth.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/buttonLoginBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginTop="@dimen/margin_base"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:onClick="@{()->vm.onBackPressed()}"
            android:padding="@dimen/margin_base"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textLoginTitle"
            style="?textAppearanceHeadline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_base_x2"
            android:layout_marginTop="@dimen/margin_base_x2"
            android:text="@string/login_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLoginBack" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLoginEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_base_x2"
            android:layout_marginTop="@dimen/margin_base_x4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLoginTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_email"
                android:inputType="textEmailAddress"
                android:text="@={vm.typedEmail}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLoginPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_base_x2"
            android:layout_marginTop="@dimen/margin_base_x2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLoginEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:text="@={vm.typedPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.AppTheme.Subtitle2.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_base_x2"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="@{()->vm.onPasswordRecoveryPressed()}"
            android:paddingHorizontal="@dimen/margin_base_x2"
            android:paddingVertical="@dimen/margin_base"
            android:text="@string/login_button_recover_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLoginPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLoginLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_base_x2"
            android:layout_marginBottom="@dimen/margin_base_x4"
            android:enabled="@{vm.isContinueActive()}"
            android:onClick="@{()->vm.onLoginPressed()}"
            android:text="@string/login_button_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:visibleOrInvisible="@{vm.contentVisible}" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/buttonLoginLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonLoginLogin"
            app:visible="@{vm.loadingVisible}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>