<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="cz.cvut.fit.travelmates.auth.recovery.start.StartRecoveryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/buttonStartRecoveryBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginTop="@dimen/margin_base"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:onClick="@{()->vm.onBackPressed()}"
            android:padding="@dimen/margin_base"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textStartRecoveryTitle"
            style="?textAppearanceHeadline4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_base_x2"
            android:layout_marginTop="@dimen/margin_base_x2"
            android:text="@string/start_recovery_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonStartRecoveryBack" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textStartRecoveryInstruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_base_x2"
            android:layout_marginTop="@dimen/margin_base_x4"
            android:text="@string/start_recovery_instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textStartRecoveryTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputStartRecoveryEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_base_x2"
            android:layout_marginTop="@dimen/margin_base_x4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textStartRecoveryInstruction">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_email"
                android:inputType="textEmailAddress"
                android:text="@={vm.typedEmail}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonStartRecoveryContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_base_x2"
            android:layout_marginBottom="@dimen/margin_base_x4"
            android:enabled="@{vm.isContinueActive()}"
            android:onClick="@{()->vm.onContinuePressed()}"
            android:text="@string/start_recovery_button_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:visibleOrInvisible="@{vm.contentVisible}" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/buttonStartRecoveryContinue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonStartRecoveryContinue"
            app:visible="@{vm.loadingVisible}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>